# Proyecto-Final-Pablo-Rubiano-Oscar-Leon-Monica-Ramirez

./: README  api.py  app.py  generador_proyecto_final.ipynb  model_metadata.json  modelo.ipynb  pyproject.toml  train_model.py
