[project]
name = "proyecto-final-pablo-rubiano-oscar-leon-monica-ramirez"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
